@@ -148,6 +148,7 @@ MODx.window.CreateUGAccessContext = function(config) {
             ,hiddenName: 'policy'
             ,baseParams: {
                 action: 'getList'
+                ,group: 'Administrator'
                 ,combo: '1'
             }
             ,allowBlank: false
@@ -195,6 +196,7 @@ MODx.window.UpdateUGAccessContext = function(config) {
             ,hiddenName: 'policy'
             ,baseParams: {
                 action: 'getList'
+                ,group: 'Administrator'
                 ,combo: '1'
             }
             ,anchor: '90%'
